# FAM

./: .clang-format  CMakeLists.txt  LICENSE  README.md  conanfile.py
cmake/: StandardProjectSettings.cmake
include/: client_runtime.hpp  connection_utils.hpp  messages.hpp  server_runtime.hpp  tcmalloc_extensions.hpp
scripts/: best-perf.sh  driver.sh  incremental-analysis.sh  scaling.sh  send_binary.sh
src/: CMakeLists.txt  RDMA_array.hpp  bfs.hpp  bitmap.hpp  build_options.hpp.in  client_runtime.cpp  communication_runtime.cpp  communication_runtime.hpp  connected_components.hpp  connection_utils.cpp  edgemap.hpp  graph_kernel.hpp  graph_types.hpp  kcore.hpp  main.cpp  mis.hpp  mmap_util.hpp  pagerank_delta.hpp  scheduler.hpp  server_runtime.cpp  stats.hpp  vertex_table.cpp  vertex_table.hpp
test/: CMakeLists.txt  tests.cpp
util/: CMakeLists.txt  compare_gr.cpp  fg2gr.cpp  main.cpp  maxd.cpp  memusage.cpp
